--- a/public/vol1.html
+++ b/public/vol1.html
@@ -23,7 +23,7 @@
                 PHOTO
             </div>
         </div>
-        <img src="images/icon.png" class="w-32 h-32 object-contain" alt="">
+        <img src="images/HumanRyuIcon.png" class="w-32 h-32 object-contain" alt="">
         <div class="mx-2 p-2 shadow-md font-kosugi">
             <div class="border-b-2 border-gray-500 w-full text-2xl">
                 龍ちゃんです( *´艸｀)
@@ -40,7 +40,7 @@
             </div>
         </div>
         <div class="p-5">
-            <img src="images/title.png"
+            <img src="images/title_Vol1.png"
                 class="w-full h-full object-contain border-2 border-black rounded-md hover:cursor-pointer"
                 onclick="onClickBlogPage()" alt="">
         </div>
