--- a/public/vol2.html
+++ b/public/vol2.html
@@ -99,13 +99,16 @@
             <p>
               どうもこんにちは!龍ちゃんです。今回は、前回の記事からの続きになっています。今回は、前回のノリでの作成と異なり、Figmaを使用してちゃんとデザインカンプを作成して作っています。
               今回の記事は<a
-                href=""
+                href="https://tech-lab-engineer.sios.jp/archives/log/20221107_ryu/"
                 class="border-b-2 border-red-400 text-red-500"
               >
                 こちらから。
               </a>
               今回の
-              <a href="" class="border-b-2 border-red-400 text-red-500">
+              <a
+                href="https://www.figma.com/file/KnfpJxFEPF6SKlXj8ZJoNX/Blog%E7%94%A8?node-id=0%3A1"
+                class="border-b-2 border-red-400 text-red-500"
+              >
                 Figma
               </a>
               も置いておきますね。こちらのテーマはゲームっぽさを意識してデザインしてみました。掲載内容は、僕が訪れた飲食店ですね。ではでは、いいTailwindLifeを！！
@@ -291,7 +294,7 @@
         </div>
         <div
           class="relative inline-block md:absolute bottom-0 right-0 w-72 h-72 hover:cursor-pointer"
-          onClick="onClickButton('')"
+          onClick="onClickButton('https://tech-lab-engineer.sios.jp/archives/log/20221107_ryu/')"
         >
           <div
             class="absolute top-1/3 left-1/3 -translate-x-14 -translate-y-6 text-2xl"
