--- a/public/vol2.html
+++ b/public/vol2.html
@@ -251,7 +251,7 @@
               class="flex flex-row gap-x-2 items-center vol2-item-li"
               onClick="onClickButton('https://fukidesign.com/')"
             >
-              吹き出しデザイン
+              フキダシデザイン
             </li>
             <li
               class="flex flex-row gap-x-2 items-center vol2-item-li"
