--- a/public/vol2.html
+++ b/public/vol2.html
@@ -316,6 +316,25 @@
         </div>
       </section>
     </footer>
-    <script src="vol2.js"></script>
+    <script>
+      let subMenuFlag = false;
+      const MenuContainer = document.getElementById("menu");
+      const SubMenuContainer = document.getElementById("submenu");
+
+      MenuContainer.addEventListener("click", () => {
+        if (subMenuFlag) {
+          SubMenuContainer.classList.remove("translate-y-0");
+          SubMenuContainer.classList.add("-translate-y-full");
+        } else {
+          SubMenuContainer.classList.remove("-translate-y-full");
+          SubMenuContainer.classList.add("translate-y-0");
+        }
+        subMenuFlag = !subMenuFlag;
+      });
+
+      const onClickButton = (url) => {
+        window.open(url);
+      };
+    </script>
   </body>
 </html>
