--- a/public/vol3.html
+++ b/public/vol3.html
@@ -160,13 +160,13 @@
           </h1>
           <img src="images/vol3logo.svg" alt="" />
           <div class="flex flex-col gap-y-3">
-            <span class="flex items-center justify-center text-2xl md:text-4xl"
+            <span class="flex items-center justify-center text-xl md:text-4xl"
               >フリー素材を提供してくれる方は</span
             >
-            <span class="flex items-center justify-center text-2xl md:text-4xl"
+            <span class="flex items-center justify-center text-xl md:text-4xl"
               >サイトの作りてから見ると</span
             >
-            <span class="flex items-center justify-center text-2xl md:text-4xl"
+            <span class="flex items-center justify-center text-xl md:text-4xl"
               >師匠に近いかもしれない</span
             >
           </div>
