--- a/public/vol3.html
+++ b/public/vol3.html
@@ -188,11 +188,11 @@
             onClick="onClickButton('https://wentz-design.com/post/figma-text-vertical-alternates/')"
           >
             <img
-              class="rounded-lg shadow-lg w-3/4 md:w-1/2 h-auto object-contain"
+              class="rounded-lg shadow-lg w-full md:w-1/2 h-auto object-contain"
               src="images/vol3link1.webp"
               alt=""
             />
-            <h2 class="w-3/4 md:w-1/2">
+            <h2 class="w-full md:w-1/2">
               Figmaでテキストを縦書きに対応する方法<br />
               -wentz-design.com
             </h2>
@@ -202,11 +202,11 @@
             onClick="onClickButton('https://kage-design.com/2015/01/01/dragon1/')"
           >
             <img
-              class="rounded-lg shadow-lg w-3/4 md:w-1/2 h-auto object-contain"
+              class="rounded-lg shadow-lg w-full md:w-1/2 h-auto object-contain"
               src="images/vol3link2.png"
               alt=""
             />
-            <h2 class="w-3/4 md:w-1/2">
+            <h2 class="w-full md:w-1/2">
               東洋の龍シルエット<br />
               -SILHOUETTE DESIGN
             </h2>
@@ -216,11 +216,11 @@
             onClick="onClickButton('https://github.com/tailwindlabs/tailwindcss/discussions/2494')"
           >
             <img
-              class="rounded-lg shadow-lg w-3/4 md:w-1/2 h-auto object-contain"
+              class="rounded-lg shadow-lg w-full md:w-1/2 h-auto object-contain"
               src="images/GitHub_Logo.png"
               alt=""
             />
-            <h2 class="w-3/4 md:w-1/2">
+            <h2 class="w-full md:w-1/2">
               Add CSS writing-mode classes to Tailwind #2494
             </h2>
           </div>
