--- a/public/vol3.html
+++ b/public/vol3.html
@@ -57,7 +57,7 @@
       </div>
     </header>
 
-    <main class="flex flex-col gap-y-5">
+    <main class="flex flex-col gap-y-5 bg-[#f7fcfe]">
       <section class="relative block w-full h-screen">
         <img
           class="hidden md:block w-full h-full object-cover"
