--- a/public/APIspecificationVol1.html
+++ b/public/APIspecificationVol1.html
@@ -173,7 +173,7 @@
                     >404</span
                   >
                   <p class="text-left">
-                    リクエストのパラメータが間違っているかもしれません。
+                    リクエストのURLが間違っているかもしれません。
                   </p>
                 </div>
                 <div
@@ -286,7 +286,7 @@
                     >404</span
                   >
                   <p class="text-left">
-                    リクエストのパラメータが間違っているかもしれません。
+                    リクエストのURLが間違っているかもしれません。
                   </p>
                 </div>
                 <div
@@ -397,7 +397,7 @@
                     >404</span
                   >
                   <p class="text-left">
-                    リクエストのパラメータが間違っているかもしれません。
+                    リクエストのURLが間違っているかもしれません。
                   </p>
                 </div>
                 <div
@@ -490,7 +490,7 @@
                     >404</span
                   >
                   <p class="text-left">
-                    リクエストのパラメータが間違っているかもしれません。
+                    リクエストのURLが間違っているかもしれません。
                   </p>
                 </div>
                 <div
